--- a/jenkinsfile
+++ b/jenkinsfile
@@ -179,8 +179,9 @@ stage('build ') {
     stage('Deploy with docker ') {
             steps {
                sh '''
-               docker run -d -p 8089:8080 devopseasylearning2021/idrissa:$ImageTAG
-	       curl ifconfig.co
+               docker rm -f deploy || true
+               docker run -d -p 1121:8080 devopseasylearning2021/idrissa:$ImageTAG
+               curl ifconfig.co 
                 '''
             }
         }
